# vdbug

./: .gitignore  Makefile  README.md  target.c  tracer  tracer.c  tracer.h
Debugger/: a.out  test.c  trace  tracer.c
dwarf/: dl_parser.c  dl_parser.h
vdbug_tui/: CMakeLists.txt
vdbug_tui/src/: helpers.cpp  main.cpp  padding.cpp
vdbug_tui/src/core/: helpers.cpp
vdbug_tui/src/inc/: d_state.hh  helpers.hh  padding.hh  tracer.hh  ui.hh
vdbug_tui/src/tracer/: tracer.c  tracer.cpp
vdbug_tui/src/ui/: padding.cpp  ui.cpp
